securitygroup.tf

resource "aws_security_group" "frontend_sg" {
  name        = var.frontend_sg_name
  description = "Allow traffic on frontend"
  vpc_id      = aws_default_vpc.vpc.id

  ingress {
    description = "TLS from Internet"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Http from Internet"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }


  tags = {
    Name = "allow_public_traffic"
  }

}

resource "aws_security_group" "backend_sg" {
  name        = var.backend_sg_name
  description = "Allow traffic on backend"
  vpc_id      = aws_default_vpc.vpc.id


  ingress {
    description = "TLS from Internet"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [aws_default_subnet.frontend.cidr_block]
  }
  ingress {
    description = "TLS from app"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = [aws_default_subnet.frontend.cidr_block]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_private_traffic"
  }
}
